@@ -33,6 +33,7 @@
 [1, 1, [192]]
 [1, 3, [6]]
 [1, 2, [3, 3]]
+1
 t^5 + t^3 + t^2
 t^5 + t^4 + 1
 t^4 + t^2 + 1
@@ -45,6 +46,8 @@ t^3 + 2*t^2 + 2
 2*t^4 + t^3 + 3*t
 2*t^5 + t^4 + t^3 + 2*t^2
 3*t^5 + 4*t^4 + 4*t^3 + 3*t^2 + 4
+1
+84*t^5 + 80*t^4 + 95*t^3 + 91*t^2 + 74*t + 37
 t
 2*t^4 + 2*t^2 + 2*t + 1
 4*t^3 + t + 1
@@ -310,4 +313,4 @@ t
 [4, 4, 3, 3, 1]:[2, 2]
 [4, 4, 4, 1, 3]:[2, 2]
 [4, 4, 4, 4, 1]:[4, 2]
-Total time spent: 84
+Total time spent: 100
